PDFBOX-5660: Simplify list and map operations, use known size when creating StringBuilder, by Axel Howind
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1914574 13f79535-47bb-0310-9956-ffa450edef68